# DTSMSBBA

./: .gitignore  CMakeLists.txt  README.md  diagram.json  platformio.ini
doc/: analyse.md
poc/: PoC.md
sdd/: SDD.md
src/: SRS.md  main.cpp  main.h
src/logic/: ExtantionDevice.h  temperature.h  voltageControl.h
test/: tests.md
test/test_desctop/: test.cpp
userManual/: userManual.md
